# architecture-sprint-8

./: .gitignore  README.md  docker-compose.yaml
api/: Dockerfile  app.py  pyproject.toml
frontend/src/: App.tsx
